# pypmp

./: .envrc.sample  .gitignore  README.md  classIndex.html  index.html  init.ipy  ipython_init.py  moduleIndex.html  nameIndex.html  objects.inv  pypmp.PasswordManagerProClient.html  pypmp.html  pypmp.pypmp.html  pyproject.toml  setup.py  tox.ini  undoccedSummary.html
.github/workflows/: apidocs.yml  ci.yaml  release.yaml
pypmp/: __init__.py  pypmp.py
