[tool.poetry]
name = "pypmp"
version = "0.3.0-1"
description = "Python lib to interact with ManageEngine Password Manager Pro's REST API"
authors = ["Philipp Schmitt <philipp.schmitt@post.lu>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/post-luxembourg/pypmp"
repository = "https://github.com/post-luxembourg/pypmp"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
